pizza message(java)

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     implementation 'org.slf4j:slf4j-api:2.0.16'
     // https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
     implementation 'org.slf4j:slf4j-simple:2.0.16'
+    implementation 'net.datafaker:datafaker:2.3.1'
 }
 
 test {
